--- a/index.html
+++ b/index.html
@@ -3,78 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>多段斬りアプリ</title> <!-- ページのタイトルを変更 -->
+    <title>多段斬りアプリ</title>
     <style>
         body {
-            background-color: black; /* 背景色を黒に設定 */
-            color: white; /* 文字色を白に設定 */
+            background-color: black;
+            color: white;
+            text-align: left; /* 左寄せ */
         }
 
         #video-container {
-            display: none;
-            width: 300px; /* ビデオの幅に合わせて調整 */
-            height: auto;
-            margin-top: 20px; /* ボタンとの間隔を20pxに設定 */
+            margin-top: 20px;
+        }
+
+        #button-container {
+            display: inline-block; /* ボタンと回数を横並びに */
+            margin-top: 10px; /* ボタンと動画の間隔を調整 */
         }
 
         button {
-            color: white; /* ボタンの文字色を白に設定 */
-            background-color: #333; /* ボタンの背景色を暗いグレーに設定 */
-            border: none; /* ボーダーをなくす */
-            padding: 10px 20px; /* パディングを設定 */
-            cursor: pointer; /* カーソルをポインターに設定 */
-            border-radius: 5px; /* ボタンの角を丸める */
-            font-size: 16px; /* フォントサイズを16pxに設定 */
+            color: white;
+            background-color: #333;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
         }
 
         button:hover {
-            background-color: #555; /* マウスオーバー時の背景色を少し明るいグレーに設定 */
+            background-color: #555;
+        }
+
+        #random-number {
+            display: inline-block; /* 回数をボタンの右側に配置 */
+            margin-left: 10px; /* ボタンと回数の間隔を調整 */
         }
     </style>
 </head>
 <body>
-    <button id="play-video-btn">多段斬り＋！</button>
-    <span id="random-number"></span>
     <div id="video-container">
         <video id="video" width="300" height="auto" muted>
             <source src="mechaleo.mp4" type="video/mp4">
-            <!-- 他のビデオ形式を追加可能 -->
         </video>
+    </div>
+    <div id="button-container"> <!-- ボタンを包む要素 -->
+        <button id="play-video-btn">多段斬り＋！</button>
+        <span id="random-number"></span> <!-- 回数を表示するための要素 -->
     </div>
 
     <script>
-        var randomTimes = 0; // 初期化
+        var randomTimes = 0;
 
         document.getElementById('play-video-btn').addEventListener('click', function() {
-            var videoContainer = document.getElementById('video-container');
             var video = document.getElementById('video');
             var randomNumberSpan = document.getElementById('random-number');
             
-            if (randomTimes === 0) { // ランダム回数が0の場合のみランダムに設定
-                randomTimes = Math.floor(Math.random() * 12) + 1; // 1から12のランダムな数
+            if (randomTimes === 0) {
+                randomTimes = Math.floor(Math.random() * 12) + 1;
                 randomNumberSpan.textContent = "　斬った回数: " + randomTimes;
             }
 
             var currentPlay = 0;
 
-            videoContainer.style.display = 'block'; // ビデオコンテナを表示
-
             function playVideo() {
                 if (currentPlay < randomTimes) {
                     currentPlay++;
-                    randomNumberSpan.textContent = "　斬った回数: " + currentPlay; // 再生回数を更新
-                    video.currentTime = 0; // ビデオの再生位置をリセット
-                    video.play(); // ビデオを再生
+                    randomNumberSpan.textContent = "　斬った回数: " + currentPlay;
+                    video.currentTime = 0;
+                    video.play();
                 } else {
-                    currentPlay = 0; // 再生回数をリセット
-                    videoContainer.style.display = 'none'; // ビデオコンテナを非表示
-                    randomTimes = 0; // ランダム回数をリセット
+                    currentPlay = 0;
+                    video.pause(); // 再生が終了したら動画を一時停止する
+                    randomTimes = 0;
                 }
             }
 
             video.addEventListener('ended', playVideo);
 
-            playVideo(); // 最初の再生を開始
+            playVideo();
         });
     </script>
 </body>
