--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" href="android-chrome-256x256.png">
-    <title>多段斬りアプリ</title>
+    <title>多段斬りアプリ</title> <!-- Created by じぇ -->
 
     <style>
         body {
@@ -44,7 +44,7 @@
         }
 
         footer {
-            border-top: 1px solid #bbb;
+            border-top: 1px solid #eee;
             padding-top: 10px;
             font-size: 12pt;
             margin-top: 20px;
@@ -65,8 +65,9 @@
     </div>
     <br><br><br><br>
     <footer>
-        ※<font color="red">WiFi通信推奨</font>です。</br>
-        ※多段斬りを１回再生した分の動画をランダム回数分、繰り返して表示するので、何回もやると通信量が増えると思うため。
+        ※<font color="red">WiFi通信推奨</font>です。<br>
+        ※多段斬りを１回再生した分の動画をランダム回数分、繰り返して表示するので、何回もやると通信量が増えると思うため。<br>
+	<br>
     </footer>
 
     <script>
