--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
             margin-top: 20px;
         }
         
+        /* リンクのスタイル */
+        a:link {
+            color: #1D9BF0;
+            text-decoration: underline;
+        }
+
+        a:visited {
+            color: #7755FF;
+            text-decoration: underline;
+        }
+
+        a:hover {
+            color: #0CFF57;
+        }
+
+        a:active {
+             color: #FF0000;
+             text-decoration: underline;
+        }
+
     </style>
 
 </head>
@@ -68,6 +88,7 @@
         ※<font color="red">WiFi通信推奨</font>です。<br>
         ※多段斬りを１回再生した分の動画をランダム回数分、繰り返して表示するので、何回もやると通信量が増えると思うため。<br>
 	<br>
+        <a href="https://jessy-rs.github.io/web-rs-tools/index.html">TOPへ戻る</a></br>
     </footer>
 
     <script>
