--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico">
@@ -9,6 +10,7 @@
     <title>多段斬りアプリ</title> <!-- Created by じぇ -->
 
     <style>
+
         body {
             background-color: black;
             color: white;
@@ -74,21 +76,25 @@
 
 </head>
 <body>
+
     <div id="video-container">
         <video id="video" width="300" height="300" muted>
             <source src="mechaleo.mp4" type="video/mp4">
         </video>
     </div>
+
     <div id="button-container"> <!-- ボタンを包む要素 -->
         <button id="play-video-btn">多段斬り＋！</button>
         <span id="random-number"></span> <!-- 回数を表示するための要素 -->
     </div>
+
     <br><br><br><br>
+
     <footer>
         ※<font color="red">WiFi通信推奨</font>です。<br>
         ※多段斬りを１回再生した分の動画をランダム回数分、繰り返して表示するので、何回もやると通信量が増えると思うため。<br>
 	<br>
-        <a href="https://jessy-rs.github.io/web-rs-tools/index.html">TOPへ戻る</a></br>
+        <a href="https://jessy-rs.github.io/web-rs-tools/index.html">INDEXへ戻る</a></br>
     </footer>
 
     <script>
@@ -130,5 +136,6 @@
         });
         
     </script>
+
 </body>
 </html>
